yaml message api and sorting staff